--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.161",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
